...
    return !(val)
        ? ListTile(
            title: Text(
              item.displayName,
              style: TextStyle(fontSize: 18),
              maxLines: 1,
              key: Key('UserName'),
              overflow: TextOverflow.ellipsis,
            ),
            leading: ClipRRect(
              borderRadius: BorderRadius.circular(40),
              child: Container(
                width: screenAwareSize(50, context),
...
